<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Soteria Authenticator</string>
    <string name="add_token">Add Token</string>
    <string name="no_codes">No codes available</string>
    <string name="label_input">Label</string>
    <string name="key_input">Key</string>
    <string name="add_button">Add</string>
    <string name="name">Name</string>
    <string name="default_code_text">--- ---</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
</resources>