<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp">


    <ImageButton
        android:id="@+id/backButton"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:src="@drawable/ic_close"
        app:tint="@android:color/black" />

    <TextView
        android:id="@+id/enterPasswordTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Enter your passcode"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginVertical="100dp"
        />


        <LinearLayout
            android:id="@+id/digitLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterPasswordTextview"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/digit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/pin_circle" />

            <ImageView
                android:id="@+id/digit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/pin_circle" />

            <ImageView
                android:id="@+id/digit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/pin_circle" />

            <ImageView
                android:id="@+id/digit4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/pin_circle" />

            <ImageView
                android:id="@+id/digit5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/pin_circle" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:text="@string/_1"
                style="@style/PinButtonStyle"
                />

            <Button
                android:id="@+id/btnTwo"
                android:text="@string/_2"
                style="@style/PinButtonStyle"
                />

            <Button
                android:id="@+id/btnThree"
                android:text="@string/_3"
                style="@style/PinButtonStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFour"
                android:text="@string/_4"
                style="@style/PinButtonStyle"/>

            <Button
                android:id="@+id/btnFive"

                android:text="@string/_5" style="@style/PinButtonStyle" />

            <Button
                android:id="@+id/btnSix"

                android:text="@string/_6" style="@style/PinButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"

                android:text="@string/_7" style="@style/PinButtonStyle" />

            <Button
                android:id="@+id/btnEight"

                android:text="@string/_8" style="@style/PinButtonStyle" />

            <Button
                android:id="@+id/btnNine"

                android:text="@string/_9" style="@style/PinButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <Button
                android:id="@+id/btnZero"
                android:text="@string/_0"
                style="@style/PinButtonStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackspace"
                app:icon="@drawable/ic_backspace"
                app:iconSize="20sp"
                app:iconPadding="0dp"
                app:iconGravity="textStart"
                app:iconTint="@color/primary"
                style="@style/PinButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bntFingerPrint"
                app:icon="@drawable/ic_fingerprint"
                app:iconPadding="0dp"
                app:iconGravity="textStart"
                app:iconSize="40sp"
                app:iconTint="@color/primary"
                style="@style/PinButtonStyle"
                />

        </LinearLayout>



    </LinearLayout>
    </RelativeLayout>



</ScrollView>